<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Call of Duty: Black Ops Scrims List</string>
    <string name="edit_scrim_title">Scrim - Edit</string>
    <string name="no_scrims">No Scrims Available</string>
    
    <!-- PostsList -->
    <string name="postslist_activity_title">Posts List</string>
    <string name="postslist_menu_insert">Add Scrim</string>
    <string name="postslist_menu_refresh">Refresh</string>
    <string name="postslist_menu_filter">Filter</string>
    <string name="postslist_menu_delete">Delete Scrim</string>
  	<string name="postslist_menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_scrim">Edit Scrim</string>
    <string name="date">Scrim Date</string>
    <string name="time">Scrim Time</string>
    
    <!-- Login -->
    <string name="login_activity_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_welcome">Please enter your credentials!</string>
    
    <!-- Registration -->
    <string name="register_activity_title">Login</string>
    <string name="register_welcome">Please enter your information!</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_xbox_live">Xbox Live Gamertag</string>
    <string name="register_psn">Playstation Network ID</string>
    
    
    <!-- Toasts -->
    <string name="scrim_saved_message">Scrim has been saved</string>
    
    <!-- Notification Bar -->
    <string name="notify_new_task_message">A scrim needs to be reviewed!</string>
    <string name="notify_new_task_title">Scrim Reminder!</string>
    
    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
	<string name="pref_category_task_defaults_title">Task Title Default</string>
	<string name="pref_task_title_key">default_reminder_title</string>
	<string name="pref_task_title_dialog_title">Default Reminder Title</string>
	<string name="pref_task_title_message">The default title for a reminder.</string>
	<string name="pref_task_title_summary">Default title for reminders.</string>
	<string name="pref_task_title_title">Default Reminder Title</string>
    
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
	<string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
	<string name="pref_default_time_from_now_title">Default Reminder Time</string>
	
</resources>
