<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation = "vertical"
	android:background ="@color/white">
	
	<TextView
		android:text = "@string/register_welcome"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:textColor = "@color/black"/>
	
	<!-- Username -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_username" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/register_username"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true" />
	
	<!-- Password -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_password" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/register_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password = "true" 
		android:singleLine="true"/>
	
	<!-- Email -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_email" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/register_email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true" />
		
	<!-- Xbox Live Gamertag -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_xbox_live" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/register_xbox_live"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true" />
	
	<!-- Playstation Network ID -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_psn" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/register_psn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true" />
	
	<!-- Create Account Button -->
	<Button
			android:id="@+id/register_create_account_button"
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="Create Account"
	/>
</LinearLayout>