<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation = "vertical"
	android:background ="@color/white">
	
	<TextView
		android:text = "@string/login_welcome"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:textColor = "@color/black"/>
	    
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_username" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/login_username"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_password" 
		android:textColor = "@color/black"/>
		
	<EditText android:id="@+id/login_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password = "true" 
		android:singleLine="true"/>
	
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation = "horizontal"
		android:background ="@color/white">
		
		<Button
			android:id="@+id/login_Button"
			android:layout_width ="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:text="Login"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/register_Button"
			android:layout_width ="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:text="Register"
			android:layout_weight="1"
		/>
	</LinearLayout>	
</LinearLayout>